--- a/index.html
+++ b/index.html
@@ -218,26 +218,42 @@
         <ul class="faq__questions">
             <li class="faq__questions__item">
                 <div class="faq__questions__item__question" data-faq-question>
-                    Pergunta?
+                    O que está incluso no Disney+?
                 </div>
                 <div class="faq__questions__item__answer text--big">
-                    A resposta da pergunta
+                    Benefícios de assinar o Disney+:
+                    <br>
+                    <br>
+                    <ul class="faq__questions__item__answer text--big">
+                        <li class="faq__questions__item__answer text">
+                            Estreias de filmes, séries originais e clássicos da Disney, Pixar, Marvel, Star Wars, National Geographic e Star.
+                        </li>
+                        <li class="faq__questions__item__answer text">
+                            Os torneios mais importantes do mundo e programas da ESPN ao vivo.
+                        </li>
+                        <li class="faq__questions__item__answer text">
+                            Até quatro telas ao mesmo tempo com o Disney+ Premium, e até duas com o Disney+ Padrão.
+                        </li>
+                        <li class="faq__questions__item__answer text">
+                            Downloads, criação de perfis e controle parental para personalizar a experiência por idade, de acordo com o seu plano.
+                        </li>
+                    </ul>
                 </div>
             </li>
             <li class="faq__questions__item faq__questions__item--is-open">
                 <div class="faq__questions__item__question" data-faq-question>
-                    Pergunta?
+                    Quais formas de pagamento que posso utilizar?
                 </div>
-                <div class="faq__questions__item__answer text--big">
-                    A resposta da pergunta
+                <div class="faq__questions__item__answer text">
+                    Você pode utilizar: cartão de débito, cartão de crédito, PayPal, Mercado Pago, e também empresas parceiras como Google Play Store, App Store da Apple, Mercado Livre e provedores locais de TV, telefonia e internet.
                 </div>
             </li>
             <li class="faq__questions__item">
                 <div class="faq__questions__item__question" data-faq-question>
-                    Pergunta?
+                    Onde posso assistir ao Disney+?
                 </div>
-                <div class="faq__questions__item__answer text--big">
-                    A resposta da pergunta
+                <div class="faq__questions__item__answer text">
+                    O aplicativo do Disney+ está disponível em dispositivos móveis, navegadores, videogames, decodificadores e smart TVs. Confira a <a href="https://help.disneyplus.com/pt-BR/" target="_blank" class="faq__link">lista completa de dispositivos compatíveis na Central de Ajuda</a>. 
                 </div>
             </li>
         </ul>
